# spirit

./: CMakeLists.txt  main.cpp
CMake/: CUDACompiler.cmake  CompilerFlags.cmake
core/: CMakeLists.txt
core/docs/: Hamiltonian.md
core/docs/c-api/: System.md
core/include/: CMakeLists.txt
core/include/Spirit/: Parameters_LLG.h  System.h
core/include/data/: Geometry.hpp  Parameters_Method_LLG.hpp  State.hpp
core/include/engine/: CMakeLists.txt  Method_LLG.hpp  Solver_Kernels.hpp  Solver_Kernels.inl  StateType.hpp  Vectormath.hpp  Vectormath.inl
core/include/engine/common/: StateType.hpp
core/include/engine/spin/: HTST.hpp  Solver_Heun.hpp  Solver_RK4.hpp
core/include/engine/spin_lattice/: CMakeLists.txt  Hamiltonian.hpp  Interaction_Standalone_Adaptor.hpp  Method.hpp  Method_LLG.hpp  Method_Solver.hpp  Solver_Heun.hpp  Solver_RK4.hpp  Solver_VP.hpp  StateType.hpp
core/include/engine/spin_lattice/interaction/: CMakeLists.txt  Displacement_Anisotropy.hpp  Exchange.hpp  Functor_Prototypes.hpp  Lattice_Harmonic_Potential.hpp  Lattice_Kinetic.hpp  Lattice_Spring_Potential.hpp  Quadruplet.hpp
core/include/io/: Configwriter.hpp  Dataparser.hpp  Dataparser.inl
core/include/io/hamiltonian/: Interactions.hpp
core/include/utility/: Configurations.inl
core/python/: setup.py
core/python/spirit/: hamiltonian.py  system.py
core/python/spirit/parameters/: llg.py
core/python/test/: hamiltonian.py
core/src/: CMakeLists.txt
core/src/Spirit/: Chain.cpp  Configurations.cpp  Geometry.cpp  HTST.cpp  Hamiltonian.cpp  IO.cpp  Parameters_LLG.cpp  Quantities.cpp  Simulation.cpp  State.cpp  System.cpp
core/src/data/: Geometry.cpp  Spin_System.cpp  Spin_System_Chain.cpp
core/src/engine/: CMakeLists.txt  Method_LLG.cpp  Vectormath.cpp
core/src/engine/spin/: HTST.cpp  Method_GNEB.cpp  Method_LLG.cpp  Method_MMF.cpp
core/src/engine/spin_lattice/: CMakeLists.txt  Method_LLG.cpp
core/src/engine/spin_lattice/interaction/: CMakeLists.txt
core/src/io/: Configparser.cpp  Configwriter.cpp  Dataparser.cpp  Datawriter.cpp
core/src/io/hamiltonian/: CMakeLists.txt  Displacement_Anisotropy.cpp  Hamiltonian.cpp  Lattice_Harmonic_Potential.cpp  Lattice_Kinetic.cpp  Lattice_Spring_Potential.cpp
core/test/: test_aggregation.cpp  test_anisotropy.cpp  test_api.cpp  test_configparser.cpp  test_ema.cpp  test_io.cpp  test_lattice.cpp  test_physics.cpp  test_pinning.cpp  test_solvers.cpp
core/test/input/: configparser_hamiltonian_lattice.cfg  lattice_harmonic.cfg  lattice_spring.cfg  physics_lattice_harmonic.cfg  physics_lattice_spring.cfg  rotationally_invariant.cfg
include/: CMakeLists.txt  Geometry.hpp  Indexing.hpp  Interaction.hpp  Managed_Allocator.hpp  Vectormath.hpp  Vectormath_Defines.hpp
src/: CMakeLists.txt  Interaction.cu  Vectormath.cu
ui-web/: CMakeLists.txt
