add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/interaction)

set(HEADER_SPIRIT_ENGINE_SPINLATTICE_INTERACTION
    ${HEADER_SPIRIT_ENGINE_SPINLATTICE_INTERACTION}
    PARENT_SCOPE
)

set(HEADER_SPIRIT_ENGINE_SPINLATTICE
    ${HEADER_SPIRIT_ENGINE_SPINLATTICE}
    ${CMAKE_CURRENT_SOURCE_DIR}/Hamiltonian.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Interaction_Standalone_Adaptor.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Method_Solver.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Method_LLG.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Solver_VP.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/StateType.hpp
    PARENT_SCOPE
)

